--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -126,12 +126,12 @@ consider [making a donation](/donate). Thank you.
 
 ## Donations
 
-In 2024 we received 929 individual donations for a total sum of $23.6M. The
-largest three were a generous $1,000,000 gift from the [Reynolds
+In 2024 we received 929 individual donations for a total sum of \$23.6M. The
+largest three were a generous \$1,000,000 gift from the [Reynolds
 Foundation](/blog/opensats-receives-one-million-from-reynolds-foundation), an
-incredibly generous $21M donation from
+incredibly generous \$21M donation from
 [#startsmall](/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall),
-and an anonymous donation of $1,000,000 made in bitcoin directly.
+and an anonymous donation of \$1,000,000 made in bitcoin directly.
 
 As announced at the beginning of the year, OpenSats is to receive [recurring
 donations from Bitwise Bitcoin ETF
@@ -155,9 +155,9 @@ in a position to make such a commitment, please don’t hesitate to [reach out t
 us](/contact).
 
 In terms of amounts received, we are happy to report that we received higher
-amounts via bitcoin directly overall, with over half a million dollars ($
+amounts via bitcoin directly overall, with over half a million dollars (\$
 526,044) received via our “[donate with bitcoin](/donate)” button on our
-website. This is about 4x as much as we received via fiat payment rails ($
+website. This is about 4x as much as we received via fiat payment rails (\$
 133,050)—excluding the large donations mentioned above. The ratio of on-chain to
 off-chain donations stayed about the same as last year, with ~70% of bitcoin
 payments made using the Lightning Network. In terms of number of donations,
@@ -182,8 +182,8 @@ infancy. The [General Fund](/funds/general) is dedicated towards all other free
 and open-source projects and contributors, especially bitcoin-related projects
 and projects that help bitcoin flourish.
 
-As of December 2024, we have allocated over $12M in grants from the General
-Fund, and close to $9M in grants from The Nostr Fund. In terms of money
+As of December 2024, we have allocated over \$12M in grants from the General
+Fund, and close to \$9M in grants from The Nostr Fund. In terms of money
 allocated [year-over-year](/blog/2023-year-in-review#allocation) this is an
 increase of 67% on the nostr side, and 81% on the bitcoin side. When looking at
 total allocation in USD terms, our two funds are at ~89% and ~52% allocated,
@@ -210,8 +210,8 @@ funded in 2024.
 
 ### Bitcoin: General Fund
 
-Out of the ~$23M donated towards our General Fund during the lifetime of the
-fund, we have allocated ~$12M towards free and open-source projects so far. In
+Out of the ~\$23M donated towards our General Fund during the lifetime of the
+fund, we have allocated ~\$12M towards free and open-source projects so far. In
 terms of gross amounts the top five categories that we gave grants to are
 Bitcoin Core, Lightning, eCash, Education, and Privacy.
 
@@ -329,8 +329,8 @@ in [February](/blog/bitcoin-grants-feb-2024),
 
 ### Nostr: The Nostr Fund
 
-Out of the ~$10M donated towards The Nostr Fund since its inception, we have
-allocated ~$8.9M as of December 2024. This means that our nostr fund is 89%
+Out of the ~\$10M donated towards The Nostr Fund since its inception, we have
+allocated ~\$8.9M as of December 2024. This means that our nostr fund is 89%
 allocated in USD terms, with the majority of grants still going to `kind1`
 client projects, as was the case last year. However, we definitely saw “other
 stuff” on the rise this year, with nostr-based app stores, P2P trading systems,
@@ -410,7 +410,7 @@ close to 1,000 applications resulting in 232 grants given.
 
 ![](/static/images/blog/2024-eoy/grantees.png)
 
-As of this writing, we are sending about $1,000,000 worth of bitcoin to our
+As of this writing, we are sending about \$1,000,000 worth of bitcoin to our
 grantees every month, something that—thanks to bitcoin—we can do at extremely
 low cost and with very little overhead.
 
