Add buttons & minor fixes

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -44,6 +44,8 @@ long-term support from our General Fund to 18, adding to the 9 announced in 2023
 [Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core), and
 [Tobin](/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin)).
 
+![](/static/images/blog/2024-eoy/lts-grantees.png)
+
 Speaking of long-term support, in March we announced the expansion of our LTS
 program to provide [long-term support for nostr
 developers](/blog/nostr-lts-long-term-support-for-nostr-developers) also, which
@@ -171,7 +173,11 @@ Fund](/funds/nostr) and our [Operations Budget](/funds/ops). In terms of
 amounts, around ~95% of money donated by the general public is directed towards
 our General Fund.
 
-[DONATE TO GENERAL FUND BUTTON]
+<center>
+    <DonateToGeneralFundButton/>
+</center>
+
+---
 
 ## Allocation
 
@@ -331,7 +337,7 @@ in [February](/blog/bitcoin-grants-feb-2024),
 
 Out of the ~\$10M donated towards The Nostr Fund since its inception, we have
 allocated ~\$8.9M as of December 2024. This means that our nostr fund is 89%
-allocated in USD terms, with the majority of grants still going to `kind1`
+allocated in USD terms, with the majority of grants still going to [`kind1`][k1]
 client projects, as was the case last year. However, we definitely saw “other
 stuff” on the rise this year, with nostr-based app stores, P2P trading systems,
 chat clients, and even website frameworks gaining traction. Media hosting and
@@ -342,6 +348,8 @@ multiple clients. This shift to “other stuff” is apparent in our 2024 alloca
 statistics as well:
 
 ![](/static/images/blog/2024-eoy/nostr-distribution.png)
+
+[k1]: https://nostrdata.github.io/kinds/
 
 As mentioned in the announcements section, we introduced [long-term support for
 nostr developers](/blog/nostr-lts-long-term-support-for-nostr-developers) in
@@ -391,7 +399,9 @@ yana](https://github.com/relaystr/ndk),
 [DVMDash](https://github.com/dtdannen/dvmdash), and
 [Safebox](https://github.com/trbouma/safebox).
 
-[DONATE TO NOSTR BUTTON]
+<center>
+    <DonateToNostrFundButton/>
+</center>
 
 You can read more about these projects in the respective announcements published
 in [July](/blog/nostr-grants-july-2024),
@@ -449,7 +459,9 @@ independently fund our small team. We are one of the few charities that don’t
 take a cut from donations, so if you think we are doing good work and you want
 us to continue to exist, please continue to support us:
 
-[DONATE TO OPS BUDGET BUTTON]
+<center>
+    <DonateToOperationsButton/>
+</center>
 
 Our hope is to scale our grant-giving efforts considerably going forward, and we
 will share some thoughts on this matter at the beginning of the new year. In the
@@ -466,5 +478,3 @@ such an organization don’t hesitate to [reach out to us](/contact).
 
 TODO: Final thank you to donors, grantees, applicants, ops, volunteers, and
 everyone who is fighting the good fight.
-
-![](/static/images/blog/2024-eoy/lts-grantees.png)
