Reorder grantees to match graphic

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -27,21 +27,23 @@ person](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
 by our estimation. In May [Shashwat
 Vangani](/blog/shashwat-vangani-receives-lts-grant) joined our roster of LTS
 grantees, followed by [Calle](/blog/cashu-calle-receives-lts-grant) in June, and
-[Jon Atack](/blog/jon-atack-receives-lts-grant) & [Jason
-Donenfeld](/blog/jason-donenfeld-lts-grant) in September.  The last two
-long-term support grants in 2024 were awarded to [Dusty
+[Jason Donenfeld](/blog/jason-donenfeld-lts-grant)
+&
+[Jon Atack](/blog/jon-atack-receives-lts-grant)
+in September. The last two long-term
+support grants in 2024 were awarded to [Dusty
 Daemon](/blog/dusty-daemon-receives-lts-grant) and
 [m1sterc001guy](/blog/m1sterc001guy-receives-lts-grant), as announced in October
 and November, respectively. This brings the total number of grantees receiving
 long-term support from our General Fund to 18, adding to the 9 announced in 2023
-([Vasil](/blog/vasil-dimov-receives-lts-grant),
-[Gleb](/blog/gleb-naumenko-receives-lts-grant),
-[Matt](/blog/matt-morehouse-lightning-security-lts-grant),
-[Furszy](/blog/furszy-receives-lts-grant-for-bitcoin-core),
-[Marco](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
+([Marco](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
 [Josi](/blog/josi-baker-receives-opensats-lts-grant),
 [Sjors](/blog/sjors-provoost-receives-opensats-lts-grant),
-[Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core), and
+[Vasil](/blog/vasil-dimov-receives-lts-grant),
+[Gleb](/blog/gleb-naumenko-receives-lts-grant),
+[Matt](/blog/matt-morehouse-lightning-security-lts-grant),
+[Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core),
+[Furszy](/blog/furszy-receives-lts-grant-for-bitcoin-core), and
 [Tobin](/blog/tobin-harding-receives-lts-grant-for-rust-bitcoin)).
 
 ![](/static/images/blog/2024-eoy/lts-grantees.png)
