--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -44,7 +44,7 @@ as in the internal and external processes of our organization.
 - [Grant Selection Process](/selection)
 - [Grant Agreement](/docs/agreement.pdf)
 - [EOY Report: 2023](/blog/2023-year-in-review)
-- EOY Report: 2024 (soon)
+- [EOY Report: 2024](/blog/2024-year-in-review)
 
 ## Ethics & Compliance
 
