--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -487,5 +487,16 @@ stage we expect to see multiple non-profits being created to support open-source
 developers across all kinds of jurisdictions. If you are thinking about creating
 such an organization don’t hesitate to [reach out to us](/contact).
 
-TODO: Final thank you to donors, grantees, applicants, ops, volunteers, and
-everyone who is fighting the good fight.
+Last but not least, we want to dedicate this last paragraph to all of you.
+Whether you are a donor, a grantee, a future applicant, or simply an interested
+reader who is interested in bitcoin and freedom tech—the revolution that is
+currently happening is only happening because of all of you. We are incredibly
+thankful for your time, care, and attention. You could be spending it on
+anything else, but you choose to spend it on bitcoin and freedom tech. Thank
+you. We are beyond grateful for the support we received, both monetarily as
+well as in the form of community and [volunteer efforts](/about#volunteers), and
+it's exhillerating to see the technical progress across [projects we
+support](/projects/showcase).  You are what makes all of this work, and we
+couldn't be doing it without you.
+
+Here's to freedom, and an even better 2025. Onwards!
