--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -12,8 +12,8 @@ Twenty-twenty-four. What a year! A lot has happened in the past 12 months, and
 just like last year, we want to take the opportunity to pause, reflect, and
 share our year in review. We want to look back at the announcements we made,
 share an update in regards to the donations we received, and give an overview of
-how we allocated our funds. We also want to share updates to our grantee numbers
-and provide an outlook of what the next year might bring.
+how we allocated our funds. After that we will share updates to our grantee
+statistics and provide an outlook of what the next year might bring.
 
 - [Announcements](#announcements)
 - [Donations](#donations)
