Improve interlinking on various pages (#375)

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -5,6 +5,23 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
+Frequently asked questions:
+
+- [What are you doing at OpenSats?](#what-are-you-doing-at-opensats)
+- [How are funds distributed?](#how-are-funds-distributed)
+- [How much of my donation goes towards open-source contributors?](#how-much-of-my-donation-goes-towards-open-source-contributors)
+- [Do you distribute grants in bitcoin or fiat?](#do-you-distribute-grants-in-bitcoin-or-fiat)
+- [How do you collect bitcoin donations?](#how-do-you-collect-bitcoin-donations)
+- [How can I communicate with you?](#how-can-i-communicate-with-you)
+- [How often are funding opportunities announced?](#how-often-are-funding-opportunities-announced)
+- [How do I apply for funding?](#how-do-i-apply-for-funding)
+- [When is the best time to apply?](#when-is-the-best-time-to-apply)
+- [How did you choose the board?](#how-did-you-choose-the-board)
+- [Do board members benefit financially from donations?](#do-board-members-benefit-financially-from-donations)
+- [Tell me more about your board. How does it work?](#tell-me-more-about-your-board-how-does-it-work)
+- [Are you really 100% passthrough?](#are-you-really-100-passthrough)
+- [Are my donations tax deductible?](#are-my-donations-tax-deductible)
+
 ## What are you doing at OpenSats?
 
 **Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which
@@ -31,12 +48,12 @@ impact projects in the Bitcoin space.
 You can find a list of past and active grantees, as well as links to our reports
 at our [transparency](/transparency) section.
 
-## How much of my donation goes towards open-source contributors supported by OpenSats?
+## How much of my donation goes towards open-source contributors?
 
 100%. All donations to our open-source funds go in full to OpenSats grant
-recipients.  We do not take a cut from donations and try our best to find donor
+recipients. We do not take a cut from donations and try our best to find donor
 matching partners that cover the transaction fees that incur with each donation,
-regardless of payment method. 
+regardless of payment method.
 
 Please [reach out] if you want to help us cover these costs.
 
@@ -64,9 +81,11 @@ The best way to [contact us](/contact) is via email:
 
 You can also write to us at:
 
-    Open Sats Initiative, Inc.  
-    42041 Cypress Parkway #4-207  
-    Punta Gorda, FL 33982  
+```
+Open Sats Initiative, Inc. 
+42041 Cypress Parkway #4-207 
+Punta Gorda, FL 33982
+```
 
 ## How often are funding opportunities announced?
 
@@ -93,6 +112,15 @@ pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an application](/apply) on
 our website.
+
+## When is the best time to apply?
+
+We are continually evaluating applications and are reviewing grant proposals as
+described in our [grant selection](/selection) process.
+
+You are free to apply at any time except for the months of March, June,
+September, and December, where we close applications to make internal
+improvements and do some housekeeping.
 
 ## How did you choose the board?
 
@@ -131,10 +159,10 @@ basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
 [Operations Budget][ops].
 
-  - John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all donations directed to our General Fund and Nostr Fund.
-  - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
-  - River provides our bitcoin exchange services with no added fees.
-  - Unchained provides our multi-sig custody services with no fees.
+- John Pfeffer, Greg Foss, Ten31, #startsmall, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all donations directed to our General Fund and Nostr Fund.
+- BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
+- River provides our bitcoin exchange services with no added fees.
+- Unchained provides our multi-sig custody services with no fees.
 
 We are committed to remaining a 100% passthrough operation, meaning that we are
 passing on 100% of donations made to our funds to open-source contributors. To
