--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -21,7 +21,69 @@ statistics and provide an outlook of what the next year might bring.
 - [Grantees](#grantees)
 - [Outlook](#outlook)
 
-TODO: A quick word on the _why?_
+But before we dive into the various graphs and numbers, let us spend a minute to
+remind everyone—and most importantly ourselves—_why_ we are doing what we are
+doing.  _"I'm convinced that to give away a dollar effectively is harder than to
+make a dollar,"_ Steve Jobs once mentioned in an interview. And indeed, making
+sure that grants are given to the right projects at the right time—in other
+words: making sure that [grant selection](/selection) is done fairly and
+properly—is an incredibly hard problem.
+
+Why set out to solve this problem in the first place? Why go through the trouble
+of creating a non-profit entity? Why spend countless hours reviewing grant
+applications, commits, reports, pull requests, and other software artifacts? Why
+bother with open-source grants at all? Shouldn't this problem be solved by
+companies, or direct crowd funding, or the state?
+
+From the beginning, the vision of OpenSats was to create a sustainable
+foundation that provides [consistent funding](/about) for free and open-source
+projects, especially those who make bitcoin flourish. While we are just a small
+part of a larger ecosystem, a public charity is the right tool for us, as it is
+independent of quarterly profits and not funded by the state. And while we
+experimented with direct crowd funding in the beginning, we quickly learned that
+most people want to outsource the selection process, which is understandable.
+
+Part of the [mission of OpenSats](/mission) is to help solve what is known as
+the "tragedy of the commons" which, as the name implies, is a _tragedy_, and
+thus not a problem that can be solved perfectly. It is probably as old as
+society itself, and we will probably try to "solve" it for as long as societies
+continue to exist. Like any parennial problem, there's no final solution, only
+trade-offs. Not every rustling bush has a tiger in it, but if you don't run away
+often enough you will get mauled by one eventually. In our case the trade-off is
+not tigers, but funding projects that shouldn't be funded vs the risk of _not_
+funding projects that should be.
+
+
+
+- Less prone to popularity contests
+- More efficient (and less corrupt) than a state
+- independent from quarterly profits of a company.
+
+We don't claim to have all the answers, but we believe that an entity like OpenSats _needs_ to exist, which is why we set out to create it.
+
+there's three things that we want to bring to the table:
+1. Long-term thinking
+2. Little overhead
+3. 
+
+
+
+
+a longer time horizon than regular grants, the LTS program is geared towards long-term stability for grantees
+
+
+> We want to see contributors to Bitcoin and FOSS (free and open-source) tools
+> supported by a sustainable ecosystem and consistent funding, so we set up a
+> foundation to do just that.
+>
+> [...]
+>
+> We don't want any one person or small group to have control of the decision
+> making process of OpenSats, so we created a transparent, public-facing, and
+> accountable nine-person board to make all organizational decisions.
+>
+><cite>—[opensats.org/about](/about)</cite>
+
 
 ## Announcements
 
