Extended intro, 2nd draft

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -37,53 +37,27 @@ companies, or direct crowd funding, or the state?
 
 From the beginning, the vision of OpenSats was to create a sustainable
 foundation that provides [consistent funding](/about) for free and open-source
-projects, especially those who make bitcoin flourish. While we are just a small
-part of a larger ecosystem, a public charity is the right tool for us, as it is
-independent of quarterly profits and not funded by the state. And while we
-experimented with direct crowd funding in the beginning, we quickly learned that
-most people want to outsource the selection process, which is understandable.
+projects, especially those who make bitcoin flourish. We don't want to be
+dependent on quarterly profits nor on funding from the state, which is why we
+chose a public charity as a vehicle.
 
-Part of the [mission of OpenSats](/mission) is to help solve what is known as
-the "tragedy of the commons" which, as the name implies, is a _tragedy_, and
-thus not a problem that can be solved perfectly. It is probably as old as
-society itself, and we will probably try to "solve" it for as long as societies
-continue to exist. Like any parennial problem, there's no final solution, only
-trade-offs. Not every rustling bush has a tiger in it, but if you don't run away
-often enough you will get mauled by one eventually. In our case the trade-off is
-not tigers, but funding projects that shouldn't be funded vs the risk of _not_
-funding projects that should be.
+As mentioned in our [mission statement](/mission), we believe that we can help
+make bitcoin more accessible, robust, secure, and decentralized. Further, we
+believe that the projects we support have the potential to revolutionize the way
+we think about individual sovereignty and liberty—values that we hold in high
+regard. We want to operate with as little overhead as possible, which is why we
+don't take a cut from donations to our funds. And we don't want any one person
+or small group to have control over funding or organizational decisions, which
+is why we have a 9-person board that is the final arbiter of all decisions.
 
-
-
-- Less prone to popularity contests
-- More efficient (and less corrupt) than a state
-- independent from quarterly profits of a company.
-
-We don't claim to have all the answers, but we believe that an entity like OpenSats _needs_ to exist, which is why we set out to create it.
-
-there's three things that we want to bring to the table:
-1. Long-term thinking
-2. Little overhead
-3. 
-
-
-
-
-a longer time horizon than regular grants, the LTS program is geared towards long-term stability for grantees
-
-
-> We want to see contributors to Bitcoin and FOSS (free and open-source) tools
-> supported by a sustainable ecosystem and consistent funding, so we set up a
-> foundation to do just that.
->
-> [...]
->
-> We don't want any one person or small group to have control of the decision
-> making process of OpenSats, so we created a transparent, public-facing, and
-> accountable nine-person board to make all organizational decisions.
->
-><cite>—[opensats.org/about](/about)</cite>
-
+We don't claim to have all the answers, and we don't claim that what we are
+doing is frictionless or perfect. We are bound to make mistakes, and we will
+always be prone to false positives (funding projects that shouldn't receive
+funding) as well as false negatives (not funding projects that should receive
+funding). We strive to gradually and continually improve our processes, and we
+hope to get better at what we are doing with every passing year. That said, we
+are incredibly pleased to see that our structure and processes are working, and
+we believe this year in review is a testament to that.
 
 ## Announcements
 
