--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -144,7 +144,7 @@ proud to have been able to move the needle in regard to worldwide freedom tech
 education.
 
 We hope that educated users will be able to use bitcoin and other freedom tech
-privately, securely, and in a way that empowers them, as opposed to the
+privately, securely, and in a way that empowers them, as opposed to empowering the
 advertisement and surveillance machinery that powers most of the web today. We
 are proud to support projects that ensure that users can have a certain level of
 privacy and security, such as [GrapheneOS](/projects/grapheneos) and [The Tor
@@ -160,12 +160,13 @@ Bitcoin is one of the most powerful open networks to date, and we believe that
 this will remain to be the case for decades to come. By [renewing our commitment
 to bitcoin](/blog/renewing-our-commitment-to-bitcoin) we want to make explicit
 that which should go without saying: we are here to support free and open-source
-projects that help bitcoin flourish, especially those that suffer from the
-tragedy of the commons, such as Bitcoin itself. We will continue to [support
-core developers](/tags/core), whether it’s seasoned veterans or [up-and-coming
-devs](/blog/caring-for-bitcoin-core), as announced in August. If you are a
-developer who wants to quit their soul-sucking fiat job to work on freedom tech,
-don’t hesitate to [apply for funding](/apply).
+projects that help bitcoin flourish, especially those that don't have a clear
+path towards direct monetization. Protocol development is an area that will be
+reliant on grants for the foreseeable future, which is why we will continue to
+[support core developers](/tags/core)—whether it’s seasoned veterans or
+[up-and-coming devs](/blog/caring-for-bitcoin-core), as announced in August. If
+you are a developer who wants to quit their soul-sucking fiat job to work on
+freedom tech, don’t hesitate to [apply for funding](/apply).
 
 Our support for these open-source developers and initiatives is only possible
 because of donors like you. We want to express our deep gratitude to everyone
@@ -244,10 +245,10 @@ respectively.
 
 ![](/static/images/blog/2024-eoy/allocation.png)
 
-As mentioned in last year’s report, we suspect that the distinction between
-“bitcoin” and “nostr” will get more blurry over time, as nostr matures and gets
-integrated into a variety of bitcoin software across the stack. This is already
-happening, especially on the eCash front. Are [Cashu
+As mentioned in [last year’s report](/blog/2023-year-in-review), we suspect that
+the distinction between “bitcoin” and “nostr” will get more blurry over time, as
+nostr matures and gets integrated into a variety of bitcoin software across the
+stack. This is already happening, especially on the eCash front. Are [Cashu
 addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
 thing, or a nostr thing? Are wallets that use nostr for social payments nostr
 clients, or bitcoin wallets? And what about P2P exchanges that use nostr to
@@ -498,8 +499,7 @@ Our generous donors make our support for free and open-source software possible.
 One of our goals for 2025 is to receive multiple recurring commitments to ensure
 that our long-term support programs are well-funded. After all, [our
 mission](/mission) is to maintain a sustainable ecosystem of funding for free
-and open-source projects and contributors, especially bitcoin-related projects
-and projects that help bitcoin flourish. We hope that our track record will
+and open-source projects and contributors. We hope that our track record will
 incentivize those who rely on bitcoin to give to OpenSats periodically, both to
 one of our funds as well as to our operations budget, which we use to
 independently fund our small team. We are one of the few charities that don’t
@@ -523,16 +523,15 @@ stage we expect to see multiple non-profits being created to support open-source
 developers across all kinds of jurisdictions. If you are thinking about creating
 such an organization don’t hesitate to [reach out to us](/contact).
 
-Last but not least, we want to dedicate this last paragraph to all of you.
+Last but not least, we want to dedicate this final paragraph to all of you.
 Whether you are a donor, a grantee, a future applicant, or simply an interested
 reader who is interested in bitcoin and freedom tech—the revolution that is
-currently happening is only happening because of all of you. We are incredibly
-thankful for your time, care, and attention. You could be spending it on
-anything else, but you choose to spend it on bitcoin and freedom tech. Thank
-you. We are beyond grateful for the support we received, both monetarily as
-well as in the form of community and [volunteer efforts](/about#volunteers), and
-it's exhillerating to see the technical progress across [projects we
-support](/projects/showcase).  You are what makes all of this work, and we
-couldn't be doing it without you.
+currently happening is only happening because of you. We are incredibly thankful
+for your time, care, and attention. You could be spending it on anything else,
+but you choose to spend it on bitcoin and freedom tech. Thank you. We are beyond
+grateful for the support we received, both monetarily as well as in the form of
+community and [volunteer efforts](/about#volunteers), and it's exhillerating to
+see the technical progress across [projects we support](/projects/showcase). You
+are what makes all of this work, and we couldn't be doing it without you.
 
 Here's to freedom, and an even better 2025. Onwards!
