Address feedback from review

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -46,18 +46,19 @@ make bitcoin more accessible, robust, secure, and decentralized. Further, we
 believe that the projects we support have the potential to revolutionize the way
 we think about individual sovereignty and liberty—values that we hold in high
 regard. We want to operate with as little overhead as possible, which is why we
-don't take a cut from donations to our funds. And we don't want any one person
+don't take a cut from donations. And we don't want any one person
 or small group to have control over funding or organizational decisions, which
 is why we have a 9-person board that is the final arbiter of all decisions.
 
 We don't claim to have all the answers, and we don't claim that what we are
 doing is frictionless or perfect. We are bound to make mistakes, and we will
-always be prone to false positives (funding projects that shouldn't receive
-funding) as well as false negatives (not funding projects that should receive
-funding). We strive to gradually and continually improve our processes, and we
-hope to get better at what we are doing with every passing year. That said, we
-are incredibly pleased to see that our structure and processes are working, and
-we believe this year in review is a testament to that.
+always be prone to false positives (funding projects that aren't as fruitful as
+we thought they would be) as well as false negatives (not funding projects that
+should receive funding). We strive to gradually and continually improve our
+processes, and we hope to get better at what we are doing with every passing
+year. That said, we are incredibly pleased to see that our structure and
+processes are working, and we believe this year in review is a testament to
+that.
 
 ---
 
@@ -66,7 +67,7 @@ we believe this year in review is a testament to that.
 At the beginning of the year, we announced long-term support for [René
 Pickhardt](/blog/rene-pickhardt-receives-lts-grant) and
 [0xB10C](/blog/0xB10C-receives-lts-grant), two researchers/developers with a
-major track record, both doing important work related to bitcoin infrastructure.
+major track record of doing important work related to bitcoin infrastructure.
 Soon after we announced long-term support for [Bruno
 Garcia](/blog/bruno-garcia-receives-lts-grant), another developer that qualifies
 as a [load-bearing internet
@@ -167,7 +168,7 @@ path towards direct monetization. Protocol development is an area that will be
 reliant on grants for the foreseeable future, which is why we will continue to
 [support core developers](/tags/core)—whether it’s seasoned veterans or
 [up-and-coming devs](/blog/caring-for-bitcoin-core), as announced in August. If
-you are a developer who wants to quit their soul-sucking fiat job to work on
+you are a developer who wants to quit your soul-sucking fiat job to work on
 freedom tech, don’t hesitate to [apply for funding](/apply).
 
 Our support for these open-source developers and initiatives is only possible
@@ -250,7 +251,7 @@ respectively.
 ![](/static/images/blog/2024-eoy/allocation.png)
 
 As mentioned in [last year’s report](/blog/2023-year-in-review), we suspect that
-the distinction between “bitcoin” and “nostr” will get more blurry over time, as
+the distinction between “bitcoin” and “nostr” will blur over time, as
 nostr matures and gets integrated into a variety of bitcoin software across the
 stack. This is already happening, especially on the eCash front. Are [Cashu
 addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
@@ -260,8 +261,7 @@ publish their order books? It is obvious to us that various concepts and
 technologies are currently merging, and we expect this cross-pollination of
 ideas to continue.
 
-With all that said, nostr is still an incredibly young network. It is just
-coming out of its infancy, which is why we will continue to fund experimental
+With all that said, nostr is still an incredibly young network, which is why we will continue to fund experimental
 and exploratory projects from our nostr fund. Before we dive into the nostr fund
 in more detail, let’s have a look at our General Fund and what projects we
 funded in 2024.
@@ -287,8 +287,8 @@ for core devs, namely:
 [0xB10C](/blog/0xB10C-receives-lts-grant),
 [Bruno](/blog/bruno-garcia-receives-lts-grant), and
 [Jon](/blog/jon-atack-receives-lts-grant). The last three were added to our LTS
-roster in 2024. In addition to these long-term grants we gave smaller grants to
-[three up-and-coming core developers](/blog/caring-for-bitcoin-core).
+roster in 2024. As mentioned before, we also gave grants
+to developers who [test and review](/blog/caring-for-bitcoin-core) Bitcoin Core.
 
 On the Lightning side, we are proud to support efforts regarding
 [Splicing](/blog/dusty-daemon-receives-lts-grant),
