--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -3,7 +3,7 @@ title: "OpenSats' 2024 Year in Review"
 date: '2024-12-30'
 tags: ['OpenSats', 'grants', 'donations', 'bitcoin', 'nostr', 'review']
 draft: false
-authors: ['dergigi']
+authors: ['dergigi', 'default']
 images: ['/static/images/blog/66-opensats-2024-year-in-review.jpg']
 summary: "365 days. Two funds. 200+ grants. Billions of sats."
 ---
