in regards to -> regarding
Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -11,7 +11,7 @@ summary: "365 days. Two funds. 200+ grants. Billions of sats."
 Twenty-twenty-four. What a year! A lot has happened in the past 12 months, and
 just like last year, we want to take the opportunity to pause, reflect, and
 share our year in review. We want to look back at the announcements we made,
-share an update in regards to the donations we received, and give an overview of
+share an update regarding the donations we received, and give an overview of
 how we allocated our funds. After that we will share updates to our grantee
 statistics and provide an outlook of what the next year might bring.
 
