--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -270,8 +270,8 @@ funded in 2024.
 
 Out of the ~\$23M donated towards our General Fund during the lifetime of the
 fund, we have allocated ~\$12M towards free and open-source projects so far. In
-terms of gross amounts the top five categories that we gave grants to are
-Bitcoin Core, Lightning, eCash, Education, and Privacy.
+terms of gross amounts the top five categories that we gave grants to in 2024
+are Bitcoin Core, Lightning, eCash, Education, and Privacy.
 
 ![](/static/images/blog/2024-eoy/bitcoin-distribution.png)
 
