--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -67,7 +67,7 @@ that.
 At the beginning of the year, we announced long-term support for [René
 Pickhardt](/blog/rene-pickhardt-receives-lts-grant) and
 [0xB10C](/blog/0xB10C-receives-lts-grant), two researchers/developers with a
-major track record of doing important work related to bitcoin infrastructure.
+proven track record of doing important work related to bitcoin infrastructure.
 Soon after we announced long-term support for [Bruno
 Garcia](/blog/bruno-garcia-receives-lts-grant), another developer that qualifies
 as a [load-bearing internet
@@ -195,7 +195,7 @@ Brink and the Human Rights Foundation’s Bitcoin Development Fund. This was
 followed by a [recurring donation commitment from Build Asset
 Management](/blog/donation-commitment-from-build-asset-management), which we
 announced at the end of the second quarter, as well as a recurring commitment
-announced by Cathy Wood, who [pledged to donate a fixed percentage of Ark’s
+announced by Cathie Wood, who [pledged to donate a fixed percentage of ARK Invest’s
 revenue to open-source
 contributors](https://njump.me/nevent1qqsqn2s0vekw45jxahy3llcg2k3jxf804kkjma45508w6g8gnht2g4cprpmhxue69uhhyetvv9ujumn0wdmksetjv5hxxmmdqyt8wumn8ghj7un9d3shjtnwdaehgu3wvfskueqpz3mhxue69uhhyetvv9ujuerpd46hxtnfdupzqpxfzhdwlm3cx9l6wdzyft8w8y9gy607tqgtyfq7tekaxs7lhmxfspda99)
 in perpetuity.
