--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -21,7 +21,7 @@ statistics and provide an outlook of what the next year might bring.
 - [Grantees](#grantees)
 - [Outlook](#outlook)
 
-But before we dive into the various graphs and numbers, let us spend a minute to
+Before we dive into the various graphs and numbers, let us spend a minute to
 remind everyone—and most importantly ourselves—_why_ we are doing what we are
 doing.  _"I'm convinced that to give away a dollar effectively is harder than to
 make a dollar,"_ Steve Jobs once mentioned in an interview. And indeed, making
