--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -68,7 +68,7 @@ At the beginning of the year, we announced long-term support for [René
 Pickhardt](/blog/rene-pickhardt-receives-lts-grant) and
 [0xB10C](/blog/0xB10C-receives-lts-grant), two researchers/developers with a
 proven track record of doing important work related to bitcoin infrastructure.
-Soon after we announced long-term support for [Bruno
+Soon after, we announced long-term support for [Bruno
 Garcia](/blog/bruno-garcia-receives-lts-grant), another developer that qualifies
 as a [load-bearing internet
 person](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
