--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -151,7 +151,7 @@ privately, securely, and in a way that empowers them, as opposed to empowering t
 advertisement and surveillance machinery that powers most of the web today. We
 are proud to support projects that ensure that users can have a certain level of
 privacy and security, such as [GrapheneOS](/projects/grapheneos) and [The Tor
-Project](/projects/tor). The former received a sizable grant from us last year,
+Project](/projects/tor). The former received a sizable grant from us last year;
 the latter received a grant from us this year. [Strengthening network privacy
 with Tor](/blog/tor-receives-support-grant) is crucial, as is the [development
 and maintenance of WireGuard](/blog/jason-donenfeld-lts-grant). We deeply
