--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -525,7 +525,7 @@ that specialization and a broader support network are paramount as the various
 ecosystems grow and specialize. We don’t have a crystal ball of course, but from
 our perspective, it isn’t hard to imagine that nostr and ecash are here to stay
 and are bound to grow, and it isn’t outlandish to think that open-source
-hardware will gain in importance as well. Bitcoin will remain to be of the
+hardware will gain in importance as well. Bitcoin will continue to be of the
 utmost importance of course, and as it enters the political arena of the world
 stage we expect to see multiple non-profits being created to support open-source
 developers across all kinds of jurisdictions. If you are thinking about creating
