--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -526,7 +526,7 @@ ecosystems grow and specialize. We don’t have a crystal ball of course, but fr
 our perspective, it isn’t hard to imagine that nostr and ecash are here to stay
 and are bound to grow, and it isn’t outlandish to think that open-source
 hardware will gain in importance as well. Bitcoin will continue to be of the
-utmost importance of course, and as it enters the political arena of the world
+utmost importance, and as it enters the political arena of the world
 stage we expect to see multiple non-profits being created to support open-source
 developers across all kinds of jurisdictions. If you are thinking about creating
 such an organization don’t hesitate to [reach out to us](/contact).
