Review edit: comma
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -161,7 +161,7 @@ free software and open networks.
 
 Bitcoin is one of the most powerful open networks to date, and we believe that
 this will remain to be the case for decades to come. By [renewing our commitment
-to bitcoin](/blog/renewing-our-commitment-to-bitcoin) we want to make explicit
+to bitcoin](/blog/renewing-our-commitment-to-bitcoin), we want to make explicit
 that which should go without saying: we are here to support free and open-source
 projects that help bitcoin flourish, especially those that don't have a clear
 path towards direct monetization. Protocol development is an area that will be
