--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -200,7 +200,7 @@ revenue to open-source
 contributors](https://njump.me/nevent1qqsqn2s0vekw45jxahy3llcg2k3jxf804kkjma45508w6g8gnht2g4cprpmhxue69uhhyetvv9ujumn0wdmksetjv5hxxmmdqyt8wumn8ghj7un9d3shjtnwdaehgu3wvfskueqpz3mhxue69uhhyetvv9ujuerpd46hxtnfdupzqpxfzhdwlm3cx9l6wdzyft8w8y9gy607tqgtyfq7tekaxs7lhmxfspda99)
 in perpetuity.
 
-We hope to receive multiple commitments of this sort from various entities, as
+We hope to receive multiple commitments of this kind from various entities, as
 the mission and philosophy of OpenSats is to [support bitcoin infrastructure for
 decades](/blog/bitcoin-infrastructure-this-decade) to come, which is why we
 launched [our long-term support
