--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -256,7 +256,7 @@ nostr matures and gets integrated into a variety of bitcoin software across the
 stack. This coalescing is already happening, especially on the eCash front. Are [Cashu
 addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
 thing, or a nostr thing? Are wallets that use nostr for social payments nostr
-clients, or bitcoin wallets? And what about P2P exchanges that use nostr to
+clients, or bitcoin wallets? And what about peer-to-peer exchanges that use nostr to
 publish their order books? It is obvious to us that various concepts and
 technologies are currently merging, and we expect this cross-pollination of
 ideas to continue.
