Apply edit from review
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -257,7 +257,7 @@ stack. This coalescing is already happening, especially on the eCash front. Are 
 addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
 thing, or a nostr thing? Are wallets that use nostr for social payments nostr
 clients, or bitcoin wallets? And what about peer-to-peer exchanges that use nostr to
-publish their order books? It is obvious to us that various concepts and
+publish their order books? Various concepts and
 technologies are currently merging, and we expect this cross-pollination of
 ideas to continue.
 
