Apply edit from review
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -487,7 +487,7 @@ aligned with our mission.
 ## Outlook
 
 As we head into the new year, we can’t help but marvel at how far we’ve come.
-Bitcoin is getting more secure, more private, and easier to use by the minute.
+Bitcoin is becoming more secure, more private, and easier to use by the minute.
 Nostr is shaping up to be the self-sovereign identity layer that the internet so
 desperately lacks, as well as a new paradigm on how to build stuff for the web.
 One that is resistant to censorship and downtime alike; one that has
