Apply edit from review
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -490,7 +490,7 @@ As we head into the new year, we can’t help but marvel at how far we’ve come
 Bitcoin is becoming more secure, more private, and easier to use by the minute.
 Nostr is shaping up to be the self-sovereign identity layer that the internet so
 desperately lacks, as well as a new paradigm on how to build stuff for the web.
-One that is resistant to censorship and downtime alike; one that has
+A paradigm that is resistant to censorship and downtime, with
 pseudonymous identity and lightning-fast payments built in. To say that we are
 bullish would be an understatement; we are exhilarated to see it all come
 together.
